[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Teko-Light3D.ttf" type="FontFile" id=1]
[ext_resource path="res://Scenes/minigames/rhythm/instructions.gd" type="Script" id=2]
[ext_resource path="res://Assets/rhythm/note.png" type="Texture2D" id=3]
[ext_resource path="res://Assets/Silver.ttf" type="FontFile" id=4]
[ext_resource path="res://Assets/rhythm/hit_bar_ex.png" type="Texture2D" id=5]

[sub_resource type="FontFile" id=5]
size = 160
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=1]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=2]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=3]
size = 75
font_data = ExtResource( 4 )

[sub_resource type="FontFile" id=4]
size = 60
font_data = ExtResource( 1 )

[node name="Rhythm_Instructions" type="Popup"]
offset_right = 900.0
offset_bottom = 600.0
exclusive = true
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.929412, 0.552941, 0.552941, 1 )

[node name="text_instr" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/bold_italics_font = SubResource( 5 )
custom_fonts/bold_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true

[node name="reg_note_fd" type="Node2D" parent="."]
visible = false

[node name="note_type" type="Label" parent="reg_note_fd"]
offset_left = 96.0
offset_top = 112.0
offset_right = 372.0
offset_bottom = 196.0
custom_fonts/font = SubResource( 3 )
text = "Regular Note"

[node name="how_to" type="Label" parent="reg_note_fd"]
offset_left = 96.0
offset_top = 440.0
offset_right = 372.0
offset_bottom = 611.0
custom_fonts/font = SubResource( 3 )
text = "Just tap to
hit it"
align = 1

[node name="reg_note" type="Sprite2D" parent="reg_note_fd"]
position = Vector2( 232, 311 )
scale = Vector2( 2.0309, 2.0309 )
texture = ExtResource( 3 )

[node name="hold_note" type="Node2D" parent="."]
visible = false
position = Vector2( 392, -8 )

[node name="note_type" type="Label" parent="hold_note"]
offset_left = 160.0
offset_top = 120.0
offset_right = 436.0
offset_bottom = 204.0
custom_fonts/font = SubResource( 3 )
text = "Hold Note"

[node name="how_to" type="Label" parent="hold_note"]
offset_left = 88.0
offset_top = 448.0
offset_right = 460.0
offset_bottom = 619.0
custom_fonts/font = SubResource( 3 )
text = "Hold until the 
next note at end"
align = 1

[node name="bar" type="ColorRect" parent="hold_note"]
modulate = Color( 1, 1, 1, 0.294118 )
offset_left = 293.0
offset_top = 232.0
offset_right = 333.0
offset_bottom = 272.0
scale = Vector2( -1.8, 4.5 )
color = Color( 0.0823529, 1, 0.913725, 1 )

[node name="hold_note" type="Sprite2D" parent="hold_note"]
position = Vector2( 256, 408 )
scale = Vector2( 1.06578, 1.06578 )
texture = ExtResource( 3 )

[node name="hold_note2" type="Sprite2D" parent="hold_note"]
position = Vector2( 256, 216 )
scale = Vector2( 1.06578, 1.06578 )
texture = ExtResource( 3 )

[node name="hit_bar_ex" type="Node2D" parent="."]
visible = false
position = Vector2( 0, -64 )

[node name="hit_bar" type="Sprite2D" parent="hit_bar_ex"]
position = Vector2( 448, 504 )
texture = ExtResource( 5 )

[node name="d" type="Label" parent="hit_bar_ex"]
offset_left = 246.0
offset_top = 472.0
offset_right = 286.0
offset_bottom = 559.0
custom_fonts/font = SubResource( 4 )
text = "D"

[node name="f" type="Label" parent="hit_bar_ex"]
offset_left = 377.0
offset_top = 468.0
offset_right = 417.0
offset_bottom = 555.0
custom_fonts/font = SubResource( 4 )
text = "F"

[node name="j" type="Label" parent="hit_bar_ex"]
offset_left = 507.0
offset_top = 470.0
offset_right = 547.0
offset_bottom = 557.0
custom_fonts/font = SubResource( 4 )
text = "J"

[node name="k" type="Label" parent="hit_bar_ex"]
offset_left = 636.0
offset_top = 470.0
offset_right = 676.0
offset_bottom = 557.0
custom_fonts/font = SubResource( 4 )
text = "K"
